# technologie-chmurowe-laby-gha

./: Dockerfile
.github/workflows/: gha.yml
weather-app-rust/: Cargo.toml
weather-app-rust/src/: main.rs
