[package]
name = "weather-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
tiny_http = "0.12"
urlencoding = "2"
chrono = "0.4"

[profile.release]
opt-level = "z" 
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
